--- a/EasyBank/Views/Operation/TotalDepositedAmount.cshtml
+++ b/EasyBank/Views/Operation/TotalDepositedAmount.cshtml
@@ -32,6 +32,7 @@
 @*@Html.Action("TotalDepositInterests")
 @Html.Action("TotalCreditInterests")*@
 @Html.Action("ProfitPlanningCalc")
-@Html.ActionLink("Interest Charge", "ProfitCalc")
+<br/>
+@Html.ActionLink("Interest Charge", "ProfitCalc", null, new{@id="add"})
 
 
