--- a/EasyBank/Views/Operation/TransferMoney.cshtml
+++ b/EasyBank/Views/Operation/TransferMoney.cshtml
@@ -20,9 +20,10 @@
     });
 </script>
 
+
 <h2>@Html.Label(@Resources.Resource.TransMoney)</h2>
 <br />
-@Html.ActionLink(@Resources.Resource.BackToProfile, "ClientsProfile", "Protected", new { clientId = Model.ClientId }, null)
+&#9664 @Html.ActionLink(@Resources.Resource.BackToProfile, "ClientsProfile", "Protected", new { clientId = Model.ClientId }, new{@id="back"})
 <br />
 <br />
 <fieldset>
