--- a/EasyBank/Views/Office/DepositList.cshtml
+++ b/EasyBank/Views/Office/DepositList.cshtml
@@ -40,7 +40,7 @@
                 @{
                     if (!item.EarlyTermination)
                     {
-                        <span>YES</span>
+                        <span>NO</span>
                     }
                 }
             </td>
