--- a/EasyBank/Views/Protected/ShowPassport.cshtml
+++ b/EasyBank/Views/Protected/ShowPassport.cshtml
@@ -5,7 +5,7 @@
 }
 <h2>@Html.Label(@Resources.Resource.Passport)</h2>
 <br />
-@Html.ActionLink(@Resources.Resource.BackToList, "ClientsList")
+&#9664 @Html.ActionLink(@Resources.Resource.BackToList, "ClientsList", null, new{@Id="back"})
 <br />
 <br />
 
