--- a/EasyBank/Views/Operation/TransferMoney.cshtml
+++ b/EasyBank/Views/Operation/TransferMoney.cshtml
@@ -23,97 +23,141 @@
 
 <h2>@Html.Label(@Resources.Resource.TransMoney)</h2>
 <br />
-&#9664 @Html.ActionLink(@Resources.Resource.BackToProfile, "ClientsProfile", "Protected", new { clientId = Model.ClientId }, new{@id="back"})
+&#9664 @Html.ActionLink(@Resources.Resource.BackToProfile, "ClientsProfile", "Protected", new { clientId = Model.ClientId }, new { @id = "back" })
 <br />
 <br />
 <fieldset>
     <legend>Account</legend>
+    <table>
+        <tr>
+            <td>
+                <div class="display-label">
+                    <b>@Html.DisplayNameFor(model => model.AccountNumber)</b>
+                </div>
+            </td>
+            <td>
+                <div class="display-field">
+                    @Html.DisplayFor(model => model.AccountNumber)
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="display-label">
+                    <b>@Html.DisplayNameFor(model => model.ExpirationDate)</b>
+                </div>
+            </td>
+            <td>
+                <div class="display-field">
+                    @Html.DisplayFor(model => model.ExpirationDate)
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="display-label">
+                    <b>@Html.DisplayNameFor(model => model.Amount)</b>
+                </div>
+            </td>
+            <td>
+                <div class="display-field">
+                    @Html.DisplayFor(model => model.Amount)
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="display-label">
+                    <b>@Html.DisplayNameFor(model => model.AvailableAmount)</b>
+                </div>
+            </td>
+            <td>
+                <div class="display-field">
+                    @Html.DisplayFor(model => model.AvailableAmount)
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="display-label">
+                    <b>@Html.DisplayNameFor(model => model.ClientId)</b>
+                </div>
+            </td>
+            <td>
+                <div class="display-field">
+                    @Html.DisplayFor(model => model.Client.Name)
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="display-label">
+                    <b>@Html.DisplayNameFor(model => model.TypeId)</b>
+                </div>
 
-    <div class="display-label">
-        <b>@Html.DisplayNameFor(model => model.AccountNumber)</b>
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.AccountNumber)
-    </div>
+            </td>
+            <td>
+                <div class="display-field">
+                    @Html.DisplayFor(model => model.AccountType.TypeName)
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="display-label">
+                    <b>@Html.DisplayNameFor(model => model.CurrencyId)</b>
+                </div>
+            </td>
+            <td>
+                <div class="display-field">
+                    @Html.DisplayFor(model => model.Currency.CurrencyName)
+                </div>
+            </td>
+        </tr>
 
-    <div class="display-label">
-        <b>@Html.DisplayNameFor(model => model.ExpirationDate)</b>
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.ExpirationDate)
-    </div>
-
-    <div class="display-label">
-        <b>@Html.DisplayNameFor(model => model.Amount)</b>
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Amount)
-    </div>
-
-    <div class="display-label">
-        <b>@Html.DisplayNameFor(model => model.AvailableAmount)</b>
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.AvailableAmount)
-    </div>
-
-    <div class="display-label">
-        <b>@Html.DisplayNameFor(model => model.ClientId)</b>
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Client.Name)
-    </div>
-
-    <div class="display-label">
-        <b>@Html.DisplayNameFor(model => model.TypeId)</b>
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.AccountType.TypeName)
-    </div>
-
-    <div class="display-label">
-        <b>@Html.DisplayNameFor(model => model.CurrencyId)</b>
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Currency.CurrencyName)
-    </div>
-
-    <div class="display-label">
-        <b>@Html.DisplayNameFor(model => model.StatusId)</b>
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.AccountStatus.StatusName)
-    </div>
+        <tr>
+            <td>
+                <div class="display-label">
+                    <b>@Html.DisplayNameFor(model => model.StatusId)</b>
+                </div>
+            </td>
+            <td>
+                <div class="display-field">
+                    @Html.DisplayFor(model => model.AccountStatus.StatusName)
+                </div>
+            </td>
+        </tr>
+    </table>
 </fieldset>
 
 <h4><b>@Resources.Resource.TransferFunds</b></h4>
 @if (Model.AccountType.TypeName != "Credit")
 {
-    using (Html.BeginForm("TransferMoney", "Operation", new{fromAccountId = Model.AccountId}, FormMethod.Post, new { @Id = "submitForm" }))
+    using (Html.BeginForm("TransferMoney", "Operation", new { fromAccountId = Model.AccountId }, FormMethod.Post, new { @Id = "submitForm" }))
     {
         Model.AccountNumber = "";
         
-        @Html.HiddenFor(model => model.ClientId)
-        @Html.HiddenFor(model => model.AccountId)
+    @Html.HiddenFor(model => model.ClientId)
+    @Html.HiddenFor(model => model.AccountId)
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.AccountNumber)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.AccountNumber)
-            @Html.ValidationMessageFor(model => model.AccountNumber)
-        </div>
+    <div class="editor-label">
+        @Html.LabelFor(model => model.AccountNumber)
+    </div>
+    <div class="editor-field">
+        @Html.EditorFor(model => model.AccountNumber)
+        @Html.ValidationMessageFor(model => model.AccountNumber)
+    </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Amount)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Amount)
-            @Html.ValidationMessageFor(model => model.Amount)
-        </div>
+    <div class="editor-label">
+        @Html.LabelFor(model => model.Amount)
+    </div>
+    <div class="editor-field">
+        @Html.EditorFor(model => model.Amount)
+        @Html.ValidationMessageFor(model => model.Amount)
+    </div>
 
-        <br />
-    <input type="submit" value=@Resources.Resource.Submit onclick="return confirm('@Resources.Resource.AskToAddMoney') ? true : false;"/>
+    <br />
+    <input type="submit" value=@Resources.Resource.Submit onclick="return confirm('@Resources.Resource.AskToAddMoney    ') ? true : false;"/>
     }
 }
 else
