--- a/EasyBank/Views/Protected/AccountHistory.cshtml
+++ b/EasyBank/Views/Protected/AccountHistory.cshtml
@@ -4,9 +4,11 @@
 
 <h2>@Html.Label(@Resources.Resource.History)</h2>
 <br />
-
- &#9664 @Html.ActionLink("Back", "ClientsProfile", "Account", null, new { @id = "back" })
-
+@if (User.IsInRole("Client"))
+{
+    <span>&#9664</span>
+    @Html.ActionLink("Back", "ClientsProfile", "Account", null, new {@id = "back"})
+}
 @if (Model.Count != 0)
 {
     <table style="margin: 0 auto;">
