--- a/EasyBank/Views/Protected/AddPhoto.cshtml
+++ b/EasyBank/Views/Protected/AddPhoto.cshtml
@@ -5,12 +5,14 @@
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
 <h2>@Html.Label(@Resources.Resource.AddPhoto)</h2>
-
+<br/>
+&#9664 @Html.ActionLink(@Resources.Resource.BackToProfile, "EditClient/"+Model.ClientId,null, new{@id="back"})
+<br/>
 @using (Html.BeginForm("AddPhoto", "Protected", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
-
+    <br/>
     <fieldset>
         <legend>Client</legend>
 
@@ -57,5 +59,5 @@
 }
 
 <div>
-    @Html.ActionLink(@Resources.Resource.BackToProfile, "ClientsProfile", Model)
+    
 </div>
